--- a/grid.html
+++ b/grid.html
@@ -277,8 +277,7 @@
 
 <script>
   function cvtUnits() {
-    loadProp('units');
-    saveProp('units',$('#units :checked').parent().index()-1);
+    saveProp('units',parIdx($('#units :checked'),-1));
     $('[name=power_rating]:gt(0)').each(function (i,e) {
       $(e).val(3);
     });
@@ -302,7 +301,7 @@
     $('#io').data('src',$(e));
   }
   function col(e) {
-    return $(`td:nth-child(${$(e).parent().index()+1})`);
+    return $(`td:nth-child(${parIdx(e,1)})`);
   }
   function colFlds(e,t) {
     return col(e).find(`[name${t ? ('='+t) : ''}]`);
@@ -323,7 +322,7 @@
   }
   function io(dlg) {
     let e = dlg.data('src');
-    switch(dlg.find(':checked').parent().index()) {
+    switch(parIdx(dlg.find(':checked'))) {
         case 1:
           saveProp('defaults',colData(e));
           break;
@@ -371,10 +370,8 @@
     Idx = $(e).parent().data('idx');
     backload('notes');
   }
-  function pumpEff(v) {   
-    let i = $(v).parent().index();
-    let r = $('td:contains("Pump efficiency")').parent();
-    r.children().eq(i).html(Bridge.pumpEff($(v).val()));
+  function pumpEff(v) {
+    $('td:contains("Pump efficiency")').parent().children().eq(parIdx(v)).html(Bridge.pumpEff($(v).val()));
   }
   function fldUnit(nm,txt) {
     $(`td>div:contains(${nm})`).last().append(`<em>(${txt})</em>`);;
