--- a/conditions.html
+++ b/conditions.html
@@ -226,16 +226,21 @@
 				case 0:
 					Units=[0,0,0,0];
 					lastCol.hide();
+					$('td').removeClass('shade');
 					$('#units td:nth-child(2)').addClass('shade');
 					break;
 				case 1:
 					Units=[2,1,1,1];
 					lastCol.hide();
+					$('td').removeClass('shade');
+					$('#units td:nth-child(3)').addClass('shade');
 					break;
 				case 2:
 					lastCol.find('select').each(function(i,e) {
 						$(e).find('option')[Units[i]].selected = true;
 					});
+					$('td').removeClass('shade');
+					$('#units td:nth-child(4)').addClass('shade');
 					lastCol.show();				
 			}
 			// if (parIdx(this)==2) {
