--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
           grid: false       
         });
-        saveProp('units',0);
+        saveProp('units',[0,0,0,0]);
       }
       function load(nm,bkHide,fn) {
         back = main;
