--- a/grid.html
+++ b/grid.html
@@ -350,15 +350,15 @@
   function fldUnit(nm) {
     $(`td>div:contains(${nm})`).last().append(`<em>(${txt})</em>`);
   }
-  txt = Units[1] == 1 ? 'hp' : 'kW';
+  txt = Units[1] == 0 ? 'hp' : 'kW';
   fldUnit('Power Rating');
   fldUnit('Motor rated');
   fldUnit('Motor shaft');
   fldUnit('Pump shaft');
   fldUnit('Motor power');
-  txt = Units[2] == 1 ? 'ft' : 'm';
+  txt = Units[2] == 0 ? 'ft' : 'm';
   fldUnit('Head');
-  txt = ['m^3/hr', 'L/s', 'gpm', 'MGD'][Units[0]];
+  txt = ['gpm','MGD','m^3/hr','L/s'][Units[0]];
   fldUnit('Flow');
 
 </script>
