--- a/index.html
+++ b/index.html
@@ -135,9 +135,8 @@
           field_voltage: 460,
 
           grid: false       
-        });
-        alert('wtf');
-        saveProp('units',[0,0,0,0]);//TODO existing cond? cvt? eek!
+        });        
+        saveProp('units',['gpm','hp','ft','psig']);//TODO existing cond? cvt? eek!
       }
       function load(nm,bkHide,fn) {
         back = main;
