--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
       }
       function saveProp(nm,v) {
         LS.setItem(nm,JSON.stringify(v));
-      }      
+      }
+      IMP = ['gpm','hp','ft','psig'];      
       function restoreDefaults() {
         saveProp('defaultCondition', {
           pump_style: 5,
@@ -136,7 +137,7 @@
 
           grid: false       
         });        
-        saveProp('units',['gpm','hp','ft','psig']);//TODO existing cond? cvt? eek!
+        saveProp('units',IMP);//TODO existing cond? cvt? eek!
       }
       function load(nm,bkHide,fn) {
         back = main;
